[package]
name = "hypermicro"
version = "0.1.0"
authors = ["Bruno Ricci <brricci@orange.fr>"]
edition = "2021"

[lib]
name = "httplib"
path = "src/lib.rs"

[[bin]]
name = "warp1"
path = "src/bin/warp1.rs"

[[bin]]
name = "warp2"
path = "src/bin/warp2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"]}